--- a/configuration.yaml
+++ b/configuration.yaml
@@ -35,12 +35,21 @@ http:
   # Using proxy ssl_certificate: !secret http_ssl_certificate
   # Using Proxy ssl_key: !secret http_ssl_key
   base_url: !secret http_base_url
+  ip_ban_enabled: True
+  login_attempts_threshold: 5
 discovery:
   ignore:
   include_used_components: True
 config:
 ios:
 map:
+updater:
+  # Optional, allows Home Assistant developers to focus on popular components.
+  include_used_components: true
+# Enables support for tracking state changes over time
+history:
+# View all events in a logbook
+logbook:
 
 ####################################################
 #                                                  #
@@ -58,13 +67,6 @@ frontend:
 ####################################################
 logger:
   default: warn
-  logs:
-    homeassistant.components.dyson: info
-  #   homeassistant.components.mqtt: debug
-  # #   homeassistant.components.light: info
-  #   homeassistant.components.dyson: debug
-  #   homeassistant.components.sensor.dyson: debug
-  #   homeassistant.components.fan.dyson: debug
 
 ####################################################
 #                                                  #
@@ -107,6 +109,27 @@ emulated_hue:
     - switch
     - light
     - scene
+
+####################################################
+#                                                  #
+#                 Push Notifications               #
+#                                                  #
+####################################################
+
+
+
+####################################################
+#                                                  #
+#                      Pushover                    #
+#                                                  #
+####################################################
+
+# Pushover
+notify:
+  - name: Pushover
+    platform: pushover
+    api_key: !secret pushover_api_key
+user_key: !secret pushover_user_key
 
 ####################################################
 #                                                  #
