--- a/includes/automations.yaml
+++ b/includes/automations.yaml
@@ -1,187 +1,11 @@
-- id: '1500048597882'
-  alias: Turn on lights in the morning and at sunset
-  trigger:
-    - platform: time
-      at: "06:30:00"
-    - platform: sun
-      event: sunset
-      offset: '-01:00:00'
-  action:
-    - service: homeassistant.turn_on
-      entity_id: switch.lwrf_hall_socket_1 # Twigs
-
-- id: a_morning_lights
-  alias: Turn off morning lights
-  trigger:
-    - platform: numeric_state
-      entity_id: sun.sun
-      value_template: "{{ state.attributes.elevation }}"
-      # Can be a positive or negative number
-      above: 10.0
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.lwrf_hall_socket_1 # Twigs
-
-- id: a_daytime_air_freshener_on
-  alias: Turn on air freshener socket in the morning
-  trigger:
-    - platform: time
-      at: "06:30:00"
-  action:
-    - service: homeassistant.turn_on
-      entity_id: switch.lwrf_hall_socket_2 # Air Freshener
-
-- id: a_daytime_air_freshener_off
-  alias: Turn off air freshener socket at night
-  trigger:
-    - platform: time
-      at: "23:00:00"
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.lwrf_hall_socket_2 # Air Freshener
-
-# Watchdog timer for motion within ironing room. Uses 2 timers to ensure constant state is detected.
-# Trigger 1: Goes to idle after 30 mins from start of HA (if not reset)
-# Trigger 2: Starts/Resets timer each time aeotec senses motion, state transistion to 8
-- id: a_ironing_room_motion_timer
-  alias: Ironing room motion detected
-  trigger:
-    - platform: homeassistant
-      event: start
-    - platform: state
-      entity_id: sensor.aeotec_zw100_multisensor_6_burglar
-      to: '8'
-  action:
-    - service: timer.start
-      data_template:
-        entity_id: timer.ironing_room_motion_timer
-    - service: timer.start
-      data_template: 
-        entity_id: timer.ironing_room_motion_timer_reset_poll
-
-# Second watchdog, reset_poll timer expires and motion sensor state is still 8, then there has been constant movement and we should reset the timers
-- id: a_ironing_room_timer_reset
-  alias: Ironing room timer reset
-  trigger:
-    - platform: event
-      event_type: timer.finished
-      event_data:
-        entity_id: timer.ironing_room_motion_timer_reset_poll
-  condition:
-    - condition: template
-      value_template: "{% if is_state('sensor.aeotec_zw100_multisensor_6_burglar','8') %}true{% endif %}"
-  action:
-    - service: timer.start
-      data_template:
-        entity_id: timer.ironing_room_motion_timer
-    - service: timer.start
-      data_template:
-        entity_id: timer.ironing_room_motion_timer_reset_poll
-
-# Trigger: Change in any properties of the smart plug.
-# Condition 1: Only trigger if drawing more than 10W AND
-# Condition 2: Only triggered if no motion detected for 10 mins, using watchdog timer.
-- id: a_IronOn_2
-  alias: Ironing Room No Motion Turn off Irons Left
-  trigger:
-    - platform: state
-      entity_id: sensor.tp_hs110_2_power
-  condition:
-    condition: and
-    conditions:
-      - condition: numeric_state
-        entity_id: sensor.tp_hs110_2_power
-        above: 10
-      - condition: template
-        value_template: "{% if is_state('timer.ironing_room_motion_timer', 'idle') %}true{% endif %}"
-      - condition: template
-        value_template: "{% if is_state('sensor.aeotec_zw100_multisensor_6_burglar','0') %}true{% endif %}"
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.tp_hs110_2
-    - service: notify.ios_michelles_iphone
-      data:
-        title: "Ironing Room Alert!"
-        message: "No Motion Detected - Turning off Ironing room Irons (Left)"
-
-- id: a_IronOn_3
-  alias: Ironing Room No Motion Turn off Irons Right
-  trigger:
-    - platform: state
-      entity_id: sensor.tp_hs110_3_power
-  condition:
-    condition: and
-    conditions:
-      - condition: numeric_state
-        entity_id: sensor.tp_hs110_3_power
-        above: 10
-      - condition: template
-        value_template: "{% if is_state('timer.ironing_room_motion_timer', 'idle') %}true{% endif %}"
-      - condition: template
-        value_template: "{% if is_state('sensor.aeotec_zw100_multisensor_6_burglar','0') %}true{% endif %}"
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.tp_hs110_3
-    - service: notify.ios_michelles_iphone
-      data:
-        title: "Ironing Room Alert!"
-        message: "No Motion Detected - Turning off Ironing room Irons (Right)"
-
-- id: a_IronOn_4
-  alias: Ironing Room No Motion Turn off Ironing Table
-  trigger:
-    - platform: state
-      entity_id: sensor.tp_hs110_4_power
-  condition:
-    condition: and
-    conditions:
-      - condition: numeric_state
-        entity_id: sensor.tp_hs110_4_power
-        above: 10
-      - condition: template
-        value_template: "{% if is_state('timer.ironing_room_motion_timer', 'idle') %}true{% endif %}"
-      - condition: template
-        value_template: "{% if is_state('sensor.aeotec_zw100_multisensor_6_burglar','0') %}true{% endif %}"
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.tp_hs110_4
-    - service: notify.ios_michelles_iphone
-      data:
-        title: "Ironing Room Alert!"
-        message: "No Motion Detected - Turning off Ironing Table"
-
-- id: a_IronOn_5
-  alias: Ironing Room No Motion Turn off Magpie Iron
-  trigger:
-    - platform: numeric_state
-      entity_id: sensor.tp_hs110_5_power
-      above: 10
-  condition:
-    condition: and
-    conditions:
-      - condition: numeric_state
-        entity_id: sensor.tp_hs110_5_power
-        above: 10
-      - condition: template
-        value_template: "{% if is_state('timer.ironing_room_motion_timer', 'idle') %}true{% endif %}"
-      - condition: template
-        value_template: "{% if is_state('sensor.aeotec_zw100_multisensor_6_burglar','0') %}true{% endif %}"
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.tp_hs110_5
-    - service: notify.ios_michelles_iphone
-      data:
-        title: "Ironing Room Alert!"
-        message: "No Motion Detected - Turning off Magpie Iron"
-
 - id: a_config_update
   alias: Update config HASS if travis build is successfull
   trigger:
     - platform: state
-      entity_id: sensor.shortblokehome_assistant_config_last_build_id
+      entity_id: sensor.jazinheirahome_assistant_config_last_build_id
   condition:
     - condition: state
-      entity_id: sensor.shortblokehome_assistant_config_last_build_state
+      entity_id: sensor.jazinheirahome_assistant_config_last_build_state
       state: 'passed'
   action:
     - service: hassio.addon_stop # Requires Git Pull is set to auto-start
@@ -192,26 +16,6 @@
       data: 
         addon: "core_git_pull"
 
-- id: a_Loft_Fan_On
-  alias: Loft Fan Turn On When Hot
-  trigger:
-    - platform: numeric_state
-      entity_id: sensor.loft_fan_temperature
-      above: 30
-  action:
-    - service: homeassistant.turn_on
-      entity_id: switch.sonoff_loft_fan_power
-
-- id: a_Loft_Fan_Off
-  alias: Loft Fan Turn Off When Not Hot
-  trigger:
-    - platform: numeric_state
-      entity_id: sensor.loft_fan_temperature
-      below: 30
-  action:
-    - service: homeassistant.turn_off
-      entity_id: switch.sonoff_loft_fan_power
-
 - id: a_hapi_low_disk
   alias: HAPi Low Disk Space Alert
   trigger:
@@ -219,7 +23,7 @@
       entity_id: sensor.disk_use_percent_
       above: 90
   action:
-    - service: notify.ios_martins_iphone
+    - service: notify.pushover
       data: 
         title: "HAPi Low Resource Alert"
         message: "Low Disk Space > 90% Used"
@@ -231,7 +35,7 @@
       entity_id: sensor.memory_use_percent
       above: 90
   action:
-    - service: notify.ios_martins_iphone
+    - service: notify.pushover
       data: 
         title: "HAPi Low Resource Alert"
         message: "Low Memory > 90% Used"
@@ -243,7 +47,7 @@
       entity_id: sensor.load_5m
       above: 2.8 # 4 Cores in RPi3 x 0.7 per core, for relatively high sustained load = 
   action:
-    - service: notify.ios_martins_iphone
+    - service: notify.pushover
       data: 
         title: "HAPi Low Resource Alert"
         message: "System Load 5m Load Average > 2.8"
@@ -257,7 +61,7 @@
       for:
         minutes: 20
   action:
-    - service: notify.ios_martins_iphone
+    - service: notify.pushover
       data_template:
         title: "Miner Monitor: Miner01 - Low Power"
         message: >-
@@ -272,7 +76,7 @@
       for:
         minutes: 30
   action:
-    - service: notify.ios_martins_iphone
+    - service: notify.pushover
       data:
         title: "Miner Monitor: Miner01"
         message:
@@ -280,7 +84,7 @@
     - service: homeassistant.turn_off
       entity_id: switch.tp_hs110_9
     - delay: 0:01
-    - service: notify.ios_martins_iphone
+    - service: notify.pushover
       data:
         title: "Miner Monitor: Miner01"
         message: "Powering Back On!"
@@ -315,7 +119,7 @@
       entity_id:
         - !secret sensor_hibp_email1
   action:
-    service: notify.ios_martins_iphone
+    service: notify.pushover
     data_template:
       message: "Warning - HaveIbeenPwned detected {{trigger.to_state.attributes.friendly_name}}"
 
@@ -339,7 +143,7 @@
     platform: state
     entity_id: updater.updater
   action:
-    service: notify.ios_martins_iphone
+    service: notify.pushover
     data:
       message: 'Update for Home Assistant is available.'
 
