--- a/includes/groups.yaml
+++ b/includes/groups.yaml
@@ -19,24 +19,24 @@ default_view:
 
 
 ## OTHER TABS (VIEWS) ##
-security_view:
-  name: Security
-  view: yes
-  entities:
-    - sensor.nest_away_mode
-    - group.nest_camera_1
-    - group.nest_garage_camera
-    - group.alarm
-    - group.motion_sensors
+# security_view:
+#   name: Security
+#   view: yes
+#   entities:
+#     - sensor.nest_away_mode
+#     - group.nest_camera_1
+#     - group.nest_garage_camera
+#     - group.alarm
+#     - group.motion_sensors
 
-miners:
-  name: Miners
-  view: yes
-  entities:
-    - group.miner01
-    - group.Aeotec_Multi_2
-    - group.automation_mining
-    - group.garage_fan
+# miners:
+#   name: Miners
+#   view: yes
+#   entities:
+#     - group.miner01
+#     - group.Aeotec_Multi_2
+#     - group.automation_mining
+#     - group.garage_fan
 
 living_room_view:
   name: Living Room
@@ -50,97 +50,24 @@ living_room_view:
     - group.dining_room_lights
     - media_player.living_room
 
-conservatory_view:
-  name: Conservatory
-  view: yes
-  entities:
-    - sensor.portable_sensor_1_temperature
-    - sensor.temp_humid_1_humidity
-    - group.conservatory_lights
-    - group.conservatory_sockets
-    - media_player.conservatory
-    - media_player.kitchen
-    - group.nest_camera_1
-
-hall_view:
-  name: Hall
-  view: yes
-  entities:
-    - sensor.hallway_thermostat_house_humidity
-    - sensor.hallway_thermostat_house_temperature
-    - group.hall_sockets
-    - group.heating
-    - group.nest_protect
-
-master_bedroom_view:
-  name: Master Bedroom
-  view: yes
-  entities:
-    - media_player.master_bedroom
-    - media_player.bathroom
-    - group.laurastar_iron
-    - sensor.temp_sensor_1_temperature
-
-ironing_room_view:
-  name: Ironing Room
-  view: yes
-  entities:
-    - sensor.aeotec_zw100_multisensor_6_temperature
-    - sensor.aeotec_zw100_multisensor_6_relative_humidity
-    - group.ironing_room_timers
-    - group.iron_sockets
-    - group.Aeotec_Multi_1
-
-boys_rooms_view:
-  name: Boys Room
-  view: yes
-  entities:
-    - sensor.portable_sensor_5_temperature
-    - sensor.temp_humid_5_humidity
-    - group.morgans_room_lights
-    - group.morgans_room_sockets
-    - sensor.portable_sensor_4_temperature
-    - sensor.temp_humid_4_humidity
+# conservatory_view:
+#   name: Conservatory
+#   view: yes
+#   entities:
+#     - sensor.portable_sensor_1_temperature
+#     - sensor.temp_humid_1_humidity
+#     - group.conservatory_lights
+#     - group.conservatory_sockets
+#     - media_player.conservatory
+#     - media_player.kitchen
+#     - group.nest_camera_1
 
 outside_view:
   name: Outside
   view: yes
   entities:
-    - sensor.temp_humid_ext_1_temperature
-    - sensor.temp_humid_ext_1_humidity
     - group.climate
     - weather.yweather
-
-loft_view:
-  name: loft
-  view: yes
-  entities:
-    # - group.hpilo
-    - group.loft
-    - group.fibaro
-    - sensor.loft_fan_temperature
-    - sensor.loft_fan_humidity
-
-garage_view:
-  name: garage
-  view: yes
-  entities:
-    - group.miner01
-    - group.Aeotec_Multi_2
-    - sensor.portable_sensor_3_temperature
-    - sensor.temp_humid_3_humidity
-    - group.nest_garage_camera
-    - group.garage_fan
-
-family_view:
-  name: Family
-  icon: mdi:account-multiple
-  view: yes
-  entities:
-    - device_tracker.martins_iphone
-    - device_tracker.michelles_iphone
-    - group.tracked_devices
-    - group.have_i_been_pawned
 
 system_view:
   name: Systems
@@ -148,183 +75,30 @@ system_view:
   view: yes
   entities:
     - group.HAPi
-    - group.hpilo
-    - group.zwave
     - group.internet
+    - group.tracked_devices
+    - group.have_i_been_pawned
 
-automation_view:
-  name: Automation
-  icon: mdi:home-automation
-  view: yes
-  entities:
-    - group.automation_utilities
-    - group.automation_system
-    - group.automation_powercontrol
-    - group.automation_mining
-    - group.alarm
+# automation_view:
+#   name: Automation
+#   icon: mdi:home-automation
+#   view: yes
+#   entities:
+#     - group.automation_utilities
+#     - group.automation_system
+#     - group.automation_powercontrol
+#     - group.automation_mining
+#     - group.alarm
 
 
 ######################## GROUPS (Cards) ########################
-conservatory_lights:
-  name: Conservatory Lights
-  entities:
-    - switch.lwrf_conservatory_1
-    - switch.lwrf_conservatory_2
-    - switch.lwrf_conservatory_3
-    - light.flux_mini
-
-conservatory_sockets:
-  name: Conservatory Switches
-  entities:
-    - switch.tp_hs110_7
-    - sensor.tp_hs110_7_power
-
-miner01:
-  name: Miner01
-  entities:
-    - switch.tp_hs110_9
-    - sensor.tp_hs110_9_power
-
-fibaro:
-  name: Fibaro Multisensor
-  entities:
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_temperature
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_burglar
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_luminance
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_seismic_intensity
-
-flamerite_fire:
-  name: Fireplace
-  entities:
-    - switch.flamerite_power
-    - switch.flamerite_heat
-    - light.flamerite_dimmer1
-    - light.flamerite_dimmer2
 
 living_room_lights:
   name: Living Room Lights
   entities:
-    - light.lwrf_livingroom_main
-    - switch.lwrf_livingroom_standard_lamp
-    - switch.lwrf_displaycabinetlight
-    - switch.lwrf_waxburner
-
-dining_room_lights:
-  name: Dining Room Lights
-  entities: 
-    - light.lwrf_diningroom_main
-    - switch.lwrf_diningroom_rennie_mac_lamp
-
-hall_sockets:
-  name: Hall Sockets
-  entities:
-    - switch.lwrf_hall_socket_1
-    - switch.lwrf_hall_socket_2
-
-iron_sockets:
-  name: Iron Sockets
-  entities:
-    - switch.tp_hs110_1
-    - sensor.tp_hs110_1_power
-    - switch.tp_hs110_2
-    - sensor.tp_hs110_2_power
-    - switch.tp_hs110_3
-    - sensor.tp_hs110_3_power
-    - switch.tp_hs110_4
-    - sensor.tp_hs110_4_power
-    - switch.tp_hs110_5
-    - sensor.tp_hs110_5_power
-
-ironing_room_timers:
-  name: Ironing Room Timers
-  entities:
-    - timer.ironing_room_motion_timer
-    - timer.ironing_room_motion_timer_reset_poll
-
-laurastar_iron:
-  name: LauraStar Iron
-  entities:
-    - switch.tp_hs110_1
-    - sensor.tp_hs110_1_power
-
-morgans_room_lights:
-  name: Morgans Lights
-  entities: 
-    - light.lwrf_morgan_main
-    - light.wifi_ufo_1
-    - light.wifi_ufo_2
-    - light.wifi_ufo_3
-    - light.wifi_ufo_4
-
-
-morgans_room_sockets:
-  name: Morgans Sockets
-  entities:
-    - switch.lwrf_morgan_ac
-
-loft:
-  name: Loft Power
-  entities:
-    - switch.sonoff_loft_fan_power
-
-climate:
-  name: Weather (local)
-  entities:
-    - sun.sun
-    - sensor.moon
-
-heating:
-  name: Heating
-  entities:
-    - sensor.hallwayhousecondition
-    - climate.hallway_house
-    - sensor.hallway_thermostat_house_hvac_state
-    - binary_sensor.hallway_thermostat_house_has_leaf
-    - binary_sensor.hallway_thermostat_house_is_using_emergency_heat
-    - sensor.nest_away_mode
-
-heating_main_page:
-  name: Heating
-  entities:
-    - climate.hallway_house
-    - sensor.hallway_thermostat_house_hvac_state
-
-nest_protect:
-  name: Nest Protect
-  entities:
-    - binary_sensor.hallway_nest_protect_online
-    - sensor.hallway_nest_protect_smoke_status
-    - sensor.hallway_nest_protect_co_status
-    - sensor.hallway_nest_protect_color_status
-    - binary_sensor.upstairs_nest_protect_online
-    - sensor.upstairs_nest_protect_smoke_status
-    - sensor.upstairs_nest_protect_co_status
-    - sensor.upstairs_nest_protect_color_status
-
-environment:
-  name: Environment
-  entities:
-    - sensor.temp_humid_ext_1_temperature
-    - sensor.temp_humid_ext_1_humidity
-    - sensor.portable_sensor_1_temperature
-    - sensor.temp_humid_1_humidity
-    - sensor.portable_sensor_2_temperature
-    - sensor.temp_humid_2_humidity
-    - sensor.portable_sensor_3_temperature
-    - sensor.temp_humid_3_humidity
-    - sensor.portable_sensor_4_temperature
-    - sensor.temp_humid_4_humidity
-    - sensor.portable_sensor_5_temperature
-    - sensor.temp_humid_5_humidity
-    - sensor.hallway_thermostat_house_temperature
-    - sensor.hallway_thermostat_house_humidity
-
-energy:
-  name: Home Monitor
-  entities:
-    - sensor.energy_sensor_a_energy_usage
-    - sensor.energy_sensor_a_total_usage
-    - sensor.energy_sensor_b_total_usage
+    - light.hue_lamp_2
+    - light.door
+    - light.bookshelf
 
 HAPi:
   name: HAPi Server
@@ -339,32 +113,11 @@ HAPi:
     - sensor.load_5m
     - sensor.load_15m
 
-hpilo:
-  name: HP Microserver G7
-  entities:
-    - sensor.nano_server_name
-    - sensor.nano_glance_power_supplies
-    - sensor.nano_glance_processor
-    - sensor.nano_glance_storage
-    - sensor.nano_glance_memory
-    - sensor.nano_glance_temperatures
-    - sensor.nano_glance_fans
-    - sensor.nano_glance_network
-    - sensor.nano_glance_bios
-    - sensor.nano_cpu_fanspeed
-    - sensor.nano_inlet_temperature
-    - sensor.nano_exhaust_temperature
-    - sensor.nano_cpu_temperature
-    - sensor.nano_pci_temperature
-    - sensor.nano_chipset_temperature
-    - sensor.nano_memory_temperature
-
 automation_utilities:
   name: Utilities
   entities:
     - automation.update_config_hass_if_travis_build_is_successfull
     - automation.Have_I_Been_Pwned_Change
-    - automation.sonos_tts_test
     - automation.hass_update_available_notifications
     - automation.hassio_weekly_snapshot_3am
     - automation.dropbox_snapshot_sync_4am
@@ -394,54 +147,11 @@ automation_system:
     - automation.hapi_low_disk_space_alert
     - automation.hapi_low_memory_alert
 
-automation_mining:
-  name: Crypto Mining Monitoring
-  entities:
-    - automation.miner01_power_watcher
-    - automation.miner01_low_power_reboot
-
-tracked_devices:
-  name: Tracked Devices
-  entities:
-    - device_tracker.martins_iphone
-    - sensor.martins_iphone_battery_level
-    - sensor.martins_iphone_battery_state
-    - device_tracker.michelles_iphone
-    - sensor.iphone_battery_level
-    - sensor.iphone_battery_state
-
 have_i_been_pawned:
   name: HaveIBeenPwned
   entities:
     - !secret sensor_hibp_email1
     - !secret sensor_hibp_email2
-    - !secret sensor_hibp_email3
-    - !secret sensor_hibp_email4
-    - !secret sensor_hibp_email5
-    - !secret sensor_hibp_email6
-    - !secret sensor_hibp_email7
-    - !secret sensor_hibp_email8
-    - !secret sensor_hibp_email9
-
-Aeotec_Multi_1:
-  name: Aeotec Multisensor
-  entities:
-    - binary_sensor.aeotec_zw100_multisensor_6_sensor
-    - sensor.aeotec_zw100_multisensor_6_burglar
-    - sensor.aeotec_zw100_multisensor_6_luminance
-    - sensor.aeotec_zw100_multisensor_6_ultraviolet
-    - sensor.aeotec_zw100_multisensor_6_dew_point
-
-Aeotec_Multi_2:
-  name: Mining - Sensor
-  entities:
-    - binary_sensor.aeotec_zw100_multisensor_6_sensor_2
-    - sensor.aeotec_zw100_multisensor_6_temperature_2
-    - sensor.aeotec_zw100_multisensor_6_relative_humidity_2
-    - sensor.aeotec_zw100_multisensor_6_burglar_2
-    - sensor.aeotec_zw100_multisensor_6_luminance_2
-    - sensor.aeotec_zw100_multisensor_6_ultraviolet_2
-    - sensor.aeotec_zw100_multisensor_6_dew_point_2
 
 scenes_living_room:
   name: Scenes Living Room
@@ -450,53 +160,13 @@ scenes_living_room:
     - scene.comfortable
     - scene.movie
 
-zwave:
-  name: Z-Wave 
-  entities:
-    - zwave.aeotec_zw090_zstick_gen5_eu
-    - zwave.aeotec_zw100_multisensor_6
-    - zwave.aeotec_zw100_multisensor_6_2
-    - zwave.fibaro_system_fgms001zw5_motion_sensor
-
-nest_camera_1:
-  name: Gnd Floor Nest Camera
-  entities:
-    - camera.living_room
-    - binary_sensor.living_room_camera_online
-    - binary_sensor.living_room_camera_motion_detected
-    - binary_sensor.living_room_camera_person_detected
-    - binary_sensor.living_room_camera_sound_detected
-
-nest_garage_camera:
-  name: Garage Nest Camera
-  entities:
-    - camera.garage
-    - binary_sensor.garage_camera_online
-    - binary_sensor.garage_camera_motion_detected
-    - binary_sensor.garage_camera_person_detected
-    - binary_sensor.garage_camera_sound_detected
-    - binary_sensor.garage_camera__garage_door_activity
-    - binary_sensor.garage_camera__hall_door_activity
-
-alarm:
-  name: Alarm
-  entities:
-    - automation.sonos_burglar_alarm
-    - automation.sonos_restore_snapshot_state
-
-motion_sensors:
-  name: Motion Sensors
-  entities:
-    - sensor.aeotec_zw100_multisensor_6_burglar
-    - sensor.aeotec_zw100_multisensor_6_burglar_2
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_burgla
-    - sensor.alarm_level_2
-
-garage_fan:
-  name: Garage Fans
-  entities:
-    - switch.tp_hs110_6
-    - sensor.tp_hs110_6_power
+# zwave:
+#   name: Z-Wave 
+#   entities:
+#     - zwave.aeotec_zw090_zstick_gen5_eu
+#     - zwave.aeotec_zw100_multisensor_6
+#     - zwave.aeotec_zw100_multisensor_6_2
+#     - zwave.fibaro_system_fgms001zw5_motion_sensor
 
 waze_travel:
   name: Waze Journeys
