--- a/includes/recorder.yaml
+++ b/includes/recorder.yaml
@@ -10,62 +10,9 @@ include:
   ########################
   # Used by history.yaml #
   ########################
-    # Nest
-    - binary_sensor.northway_away # Away Mode
-    # Nest Thermostat
-    - climate.hallway_house # Aggregate information
-    - sensor.hallway_thermostat_house_hvac_state # Heating Status
-    - sensor.hallway_thermostat_house_target # Target Temp
-    - sensor.hallway_thermostat_house_temperature # Current Temp
-    # Nest Smoke Detectors
-    - sensor.hallway_nest_protect_smoke_status
-    - sensor.hallway_nest_protect_co_status
-    - sensor.upstairs_nest_protect_smoke_status
-    - sensor.upstairs_nest_protect_co_status
-    # HS110 Smart Plug Power Usage
-    - sensor.tp_hs110_1_power
-    - sensor.tp_hs110_2_power
-    - sensor.tp_hs110_3_power
-    - sensor.tp_hs110_4_power
-    - sensor.tp_hs110_5_power
-    - sensor.tp_hs110_6_power
-    - sensor.tp_hs110_7_power
-    - sensor.tp_hs110_8_power
-    - sensor.tp_hs110_9_power
-    # RFX Environmental Sensors
-    - sensor.portable_sensor_1_temperature
-    - sensor.temp_humid_1_humidity
-    - sensor.portable_sensor_2_temperature
-    - sensor.temp_humid_2_humidity
-    - sensor.portable_sensor_3_temperature
-    - sensor.temp_humid_3_humidity
-    - sensor.portable_sensor_4_temperature
-    - sensor.temp_humid_4_humidity
-    - sensor.portable_sensor_5_temperature
-    - sensor.temp_humid_5_humidity
-    - sensor.temp_humid_ext_1_temperature
-    - sensor.temp_humid_ext_1_humidity
-    - sensor.temp_sensor_1_temperature
-    # MQTT Sensors
-    - sensor.loft_fan_temperature
-    - sensor.loft_fan_humidity
-    # Z-Wave Sensors
-    - sensor.aeotec_zw100_multisensor_6_temperature
-    - sensor.aeotec_zw100_multisensor_6_relative_humidity
-    - sensor.aeotec_zw100_multisensor_6_temperature_2
-    - sensor.aeotec_zw100_multisensor_6_relative_humidity_2
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_temperature
-    - sensor.fibaro_system_fgms001zw5_motion_sensor_seismic_intensity
     # HaveIBeenPwned
-    - sensor.breaches_martinrowannetcouk
-    - sensor.breaches_michellerowannetcouk
-    - sensor.breaches_junerowannetcouk
-    - sensor.breaches_morganrowannetcouk
-    - sensor.breaches_fraserrowannetcouk
-    - sensor.breaches_robertrowannetcouk
-    - sensor.breaches_martinrowancitrixcom
-    - sensor.breaches_martinrowaneucitrixcom
-    - sensor.breaches_mrowanhighlightnet
+    - sensor.breaches_jva357gmailcom
+    - sensor.breaches_carnisauraolcom
     # Waze
     - sensor.to_home
     - sensor.to_work
@@ -82,5 +29,5 @@ include:
   # Not used in History.yaml #
   ############################
     # Travis CI
-    - sensor.shortblokehome_assistant_config_last_build_state
-    - sensor.shortblokehome_assistant_config_last_build_id
+    - sensor.jazinheirahome_assistant_config_last_build_state
+    - sensor.jazinheirahome_assistant_config_last_build_id
