--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,7 +12,6 @@ homeassistant:
   temperature_unit: F
   unit_system: metric
   customize: !include includes/customize.yaml
-  customize_glob: !include includes/customize_glob.elevationyaml
 
 ###################################################
 #                                                 #
@@ -38,8 +37,8 @@ http:
   ip_ban_enabled: True
   login_attempts_threshold: 5
 discovery:
-  ignore:
-  include_used_components: True
+  enable:
+    - dlna_dmr
 config:
 ios:
 map:
@@ -129,7 +128,7 @@ notify:
   - name: Pushover
     platform: pushover
     api_key: !secret pushover_api_key
-user_key: !secret pushover_user_key
+    user_key: !secret pushover_user_key
 
 ####################################################
 #                                                  #
