--- a/includes/recorder.yaml
+++ b/includes/recorder.yaml
@@ -11,8 +11,8 @@ include:
   # Used by history.yaml #
   ########################
     # HaveIBeenPwned
-    - sensor.breaches_jva357gmailcom
-    - sensor.breaches_carnisauraolcom
+    - !secret sensor_hibp_email1
+    - !secret sensor_hibp_email2
     # Waze
     - sensor.to_home
     - sensor.to_work
