add fake pushover secret for travis builds

--- a/travis/travis_secrets.yaml
+++ b/travis/travis_secrets.yaml
@@ -70,3 +70,6 @@ waze_work: "Business Park, town, area, UK"
 
 # For TasmoAdmin - Sonoff
 TasmoAdminURL: https://1.2.3.4:9541
+
+pushover_api_key: lsdkjfdkfj8983uisdf
+pushover_user_key: JFf34904jJIosfij3w87nn
