Add fake darksky_api_key for travis tests

--- a/travis/travis_secrets.yaml
+++ b/travis/travis_secrets.yaml
@@ -73,3 +73,5 @@ TasmoAdminURL: https://1.2.3.4:9541
 
 pushover_api_key: lsdkjfdkfj8983uisdf
 pushover_user_key: JFf34904jJIosfij3w87nn
+
+darksky_api_key: i8bjhGRw659879n
