--- a/configuration.yaml
+++ b/configuration.yaml
@@ -34,8 +34,11 @@ http:
   # Using proxy ssl_certificate: !secret http_ssl_certificate
   # Using Proxy ssl_key: !secret http_ssl_key
   base_url: !secret http_base_url
-  ip_ban_enabled: True
-  login_attempts_threshold: 5
+  ip_ban_enabled: true
+  login_attempts_threshold: 10
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - 10.0.0.10
 discovery:
   enable:
     - dlna_dmr
