--- a/configuration.yaml
+++ b/configuration.yaml
@@ -52,6 +52,12 @@ updater:
 history:
 # View all events in a logbook
 logbook:
+device_tracker:
+  - platform: nmap_tracker
+    hosts: 10.0.0.0/24
+    home_interval: 10
+    exclude:
+     - 10.0.0.2
 
 ####################################################
 #                                                  #
