Add spotify connection

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -61,6 +61,16 @@ device_tracker:
 
 ####################################################
 #                                                  #
+#                 Media Players                    #
+#                                                  #
+####################################################
+media_player:
+  - platform: spotify
+    client_id: !secret spotify_client_id
+    client_secret: !secret spotify_client_secret
+
+####################################################
+#                                                  #
 #                 Customisations                   #
 #                                                  #
 ####################################################
