--- a/travis/travis_secrets.yaml
+++ b/travis/travis_secrets.yaml
@@ -75,3 +75,6 @@ pushover_api_key: lsdkjfdkfj8983uisdf
 pushover_user_key: JFf34904jJIosfij3w87nn
 
 darksky_api_key: i8bjhGRw659879n
+
+spotify_client_id: bf874d23ce0041049910d63e7939cfc6
+spotify_client_secret: 8f0c735f06b844e791b76fb1e13160cc
