--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,7 +30,7 @@ panel_iframe:
 #                                                  #
 ####################################################
 http:
-  api_password: !secret http_api_password # Used for IOS App
+  #api_password: !secret http_api_password # Used for IOS App
   # Using proxy ssl_certificate: !secret http_ssl_certificate
   # Using Proxy ssl_key: !secret http_ssl_key
   base_url: !secret http_base_url
